--- a/conf/app.conf
+++ b/conf/app.conf
@@ -2,3 +2,4 @@ appname = HTTPUploadBigFile
 httpaddr = 127.0.0.1
 httpport = 8080
 runmode = dev
+RuntimeUploadDataDirectory = /home/huangjian/a/git/huangjian/HTTPUploadBigFile/tmp
